--- a/09 kap3.tex
+++ b/09 kap3.tex
@@ -1,3 +1,10 @@
-\section{Porovnanie výsledkov}
+\section{Metodika skúmania}
 
-Hello world
+Cieľom nášho skúmania bude nájsť ideálnu maticu vstupu do experimentu (konkrétny problém popíšeme v nasledujúcej kapitole). 
+Pokúsime sa vysloviť závery pre všeobecný prípad matice $m \times n$,
+avšak pre istý prvotný náhľad do problematiky problém popíšeme a preskúmame na menších rozmeroch, 
+konkrétne do rozmeru, do ktorého nám to umožní výpočtová technika. Pracovať budeme s programovacím jazykom \textit{python}.
+
+Od „preskúmania situácie“ do istého rozmeru si sľubujeme dôležité náhľady, 
+ktoré nám umožnia vysloviť závery a hypotézy pre všeobecný prípad $m \times n$. 
+Tie sa následne pokúsime dokázať matematickými metódami.
