--- a/Bakalarka.tex
+++ b/Bakalarka.tex
@@ -18,6 +18,8 @@
 
 \usepackage{xcolor}
 
+% \renewcommand{\familydefault}{\rmdefault}
+
 \newtheorem{defin}{Definícia}[section]
 \newtheorem{theorem}[defin]{Veta}
 \newtheorem{prop}[defin]{Tvrdenie}
@@ -84,31 +86,37 @@ plainpages=false
     
     \input{06 Uvod} 
 
-  \newpage  
-	\input{07 kap1}
-
   \newpage
+  \input{07 kap1}
+
+  \newpage  
 	\input{08 kap2}
 
   \newpage
-  \input{09 kap3}
+	\input{09 kap3}
+
+  \newpage
+  \input{10 kap4}
+
+  \newpage
+  \input{11 kap5}
 
 	\newpage
   \section*{Záver}
     \addcontentsline{toc}{section}{Záver}
     \markboth{ZÁVER}{ZÁVER} 
-    \input{10 Zaver}
+    \input{12 Zaver}
   
   \newpage
   \renewcommand{\refname}{Zoznam použitej literatúry}
-  \input{11 Literatura}
+  \input{13 Literatura}
   
 	\newpage
   \appendix
   \section*{Príloha A} 
     \addcontentsline{toc}{section}{Príloha A}
     \markboth{Príloha A}{Príloha A}
-    \input{12 AppendixA}
+    \input{14 AppendixA}
     %\begin{comment}
 %\end{comment}
 \end{document}
