linear projectors theory + fixes

--- a/08 kap2.tex
+++ b/08 kap2.tex
@@ -27,7 +27,7 @@ Keď lineárne vzťahy pre každú z $n$ nameraných jednotiek zapíšeme matico
 y = Xb + e
 \end{align}
 
-kde $y = (y_1, y_2, \ldots, y_n)^T$, $e = (e_1, e_2, \ldots, e_n)^T$ a
+kde $y = (y_1, y_2, \ldots, y_n)^T$, $e = (e_1, e_2, \ldots, e_n)^T$ je náhodná chyba a
 
 \begin{center}
 $
