--- a/10 kap4.tex
+++ b/10 kap4.tex
@@ -314,7 +314,7 @@ Potom $B$ nazývame optimálnou, ak pre všetky binárne matice $C \in \mathbb{R
 \label{optimal matrix}
 $h^T M_{B}^- h \leq h^T M_{C}^- h$
 \end{center}
-kde $M_{B}^-$ a $M_{C}^-$ sú ľubovolné pseudoinverzie informačných matíc $M_B$ a $M_C$.
+kde $M_{B}^-$ a $M_{C}^-$ sú ľubovoľné pseudoinverzie informačných matíc $M_B$ a $M_C$.
 
 \end{defin}
 
