--- a/Bakalarka.tex
+++ b/Bakalarka.tex
@@ -18,6 +18,8 @@
 
 \usepackage{xcolor}
 
+\usepackage{enumitem}
+
 % \renewcommand{\familydefault}{\rmdefault}
 
 \newtheorem{defin}{Definícia}[section]
