--- a/07 kap1.tex
+++ b/07 kap1.tex
@@ -4,7 +4,7 @@
 V našej práci budeme často pracovať s poznatkami z lineárnej algebry, preto v krátkosti zhrnieme niektoré najdôležitejšie z nich.
 
 \begin{defin}
-Nech $A$ je ľubovolná matica typu $m \times n$. Potom symbolom $\mathcal{M}(A)$ označujeme stĺpcový priestor matice $A$, t. j.
+Nech $A$ je ľubovoľná matica typu $m \times n$. Potom symbolom $\mathcal{M}(A)$ označujeme stĺpcový priestor matice $A$, t. j.
 \begin{center}
 $
 \mathcal{M}(A) = \{ Au : u \in \mathbb{R}^n \}
@@ -39,7 +39,7 @@ $
 
 \begin{lema}
 \label{o stlpcovych priestoroch}
-Nech $A$ je ľubovolná matica typu $m \times n$. Potom
+Nech $A$ je ľubovoľná matica typu $m \times n$. Potom
 \begin{center}
 $\mathcal{M}(A^T) = \mathcal{M}(A^T A)$
 \end{center}
@@ -86,7 +86,7 @@ Pseudoinverzie použijeme neskôr v našej práci, keď budeme skúmať,
 
 \begin{theorem}
 \label{veta3}
-Nech rovnica $Ax = y$ má riešenie a nech $A^-$ je ľubovolná $g$-inverzia. Potom $A^- y$ je riešením tejto rovnice.
+Nech rovnica $Ax = y$ má riešenie a nech $A^-$ je ľubovoľná $g$-inverzia. Potom $A^- y$ je riešením tejto rovnice.
 \end{theorem}
 
 \begin{dokaz}
@@ -95,3 +95,69 @@ Keďže $Ax = y$ má riešenie, tak existuje také $x_0$, že $A x_0 = y$. Potom
 $A (A^- y) = A(A^- A x_0) = A x_0 = y$
 \end{center}
 \end{dokaz}
+
+\subsection{Projekčné matice}
+
+Pri práci s lineárnym regresným modelom sa nám zídu poznatky o projekčných maticiach, napr. pri metóde najmenších štvorcov.
+
+\begin{defin}
+\label{linearny projektor}
+Nech $\mathcal{V} \subset \mathbb{R}^n$ je lineárny priestor. Potom matica $P$ je lineárny projektor na $\mathcal{V}$ práve vtedy,
+keď platia nasledovné podmienky:
+\begin{enumerate}[label=\emph{\alph*})]
+  \item
+    $
+    {\forall}_{x \in \mathbb{R}^n} Px \in \mathcal{V}
+    $
+  \item
+    $
+    {\forall}_{v \in \mathcal{V}} Pv = v
+    $
+\end{enumerate}
+\end{defin}
+
+Z vlastností a) a b) vyplýva, že $P^2 = P$, t. j. matica $P$ je idempotentná.
+Poznamenávame, že aj naopak, ak matica $P$ je idempotentná a definujeme $V = \mathcal{M}(P)$, tak $P$ má vlastnosti a) a b) z predošlej definície.
+
+Takto definovaný projektor nemusí byť ortogonálny, t. j. nezobrazuje vektory na k nim najbližší vektor z priestoru $V$.
+Formálne ortogonalitu definujeme nasledovne.
+
+\begin{defin}
+\label{ortogonalny projektor}
+Projektor $P$ na lineárny podpriestor $V$ je ortogonálny vzhľadom na skalárny súčin $\langle \cdot,\cdot \rangle$,
+ak $\langle x, Py \rangle = \langle Px, y \rangle$ pre všetky $x, y \in \mathbb{R}^n$.
+\end{defin}
+
+\begin{theorem}
+Nech $F \in \mathbb{R}^{m \times m}$, $m > n$ má plnú hodnosť a nech $\rangle a, b \langle = a^T b$ je skalárny súčin v $\mathbb{R}^m$.
+Potom ortogonálny projektor na $\mathcal{M}(F)$ je
+\begin{center}
+$
+P = F(F^T F)^{-1} F^T
+$
+\end{center}
+\end{theorem}
+
+\begin{dokaz}
+Ukážeme, že $P$ spĺňa vlastnosti z definície lineárneho projektora, aj podmienku ortogonality z definície \ref{ortogonalny projektor}.
+\begin{center}
+$
+{\forall}_{x \in \mathbb{R}^m} Px = F(F^T F)^{-1} F^T x = Fu \in \mathcal{M}(F)
+$
+\end{center}
+\begin{center}
+$
+{\forall}_{l = Fu \in \mathcal{M}(F)} Pl = P(Fu) = F(F^T F)^{-1} F^T F u = Fu = l
+$
+\end{center}
+\begin{center}
+$
+{\forall}_{x, y \in \mathbb{R}^m} \langle x, Py \rangle = x^T F(F^T F)^{-1} F^T y = x^T [F (F^T F)^{-1} F^T]^T y = x^T P^T y = \langle Px, y \rangle
+$
+\end{center}
+\end{dokaz}
+
+\begin{theorem}
+Predchádzajúca veta platí aj pre maticu $F$, ktorá nemá plnú hodnosť,
+ak namiesto inverzie $(F^T F)^{-1}$ použijeme ľubovoľnú $g$-inverziu $(F^T F)^{-}$.
+\end{theorem}
