--- a/07 kap1.tex
+++ b/07 kap1.tex
@@ -158,6 +158,7 @@ $
 \end{dokaz}
 
 \begin{theorem}
+\label{ortogonalny projektor na maticu}
 Predchádzajúca veta platí aj pre maticu $F$, ktorá nemá plnú hodnosť,
 ak namiesto inverzie $(F^T F)^{-1}$ použijeme ľubovoľnú $g$-inverziu $(F^T F)^{-}$.
 \end{theorem}
