--- a/Bakalarka.tex
+++ b/Bakalarka.tex
@@ -100,8 +100,8 @@ plainpages=false
   \newpage
   \input{10 kap4}
 
-  \newpage
-  \input{11 kap5}
+  % \newpage
+  % \input{11 kap5}
 
 	\newpage
   \section*{Záver}
